; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varlena.c_varstr_abbrev_abort.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varlena.c_varstr_abbrev_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }
%struct.TYPE_4__ = type { double, i32, i32 }

@LOG = common dso_local global i32 0, align 4
@trace_sort = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_5__*)* @varstr_abbrev_abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @varstr_abbrev_abort(i32 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** %6, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @Assert(i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 100
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %52

20:                                               ; preds = %2
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 2
  %23 = call double @estimateHyperLogLog(i32* %22)
  store double %23, double* %7, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = call double @estimateHyperLogLog(i32* %25)
  store double %26, double* %8, align 8
  %27 = load double, double* %7, align 8
  %28 = fcmp ole double %27, 1.000000e+00
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store double 1.000000e+00, double* %7, align 8
  br label %30

30:                                               ; preds = %29, %20
  %31 = load double, double* %8, align 8
  %32 = fcmp ole double %31, 1.000000e+00
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  store double 1.000000e+00, double* %8, align 8
  br label %34

34:                                               ; preds = %33, %30
  %35 = load double, double* %7, align 8
  %36 = load double, double* %8, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load double, double* %38, align 8
  %40 = fmul double %36, %39
  %41 = fcmp ogt double %35, %40
  br i1 %41, label %42, label %51

42:                                               ; preds = %34
  %43 = load i32, i32* %4, align 4
  %44 = icmp sgt i32 %43, 10000
  br i1 %44, label %45, label %50

45:                                               ; preds = %42
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  %48 = load double, double* %47, align 8
  %49 = fmul double %48, 6.500000e-01
  store double %49, double* %47, align 8
  br label %50

50:                                               ; preds = %45, %42
  store i32 0, i32* %3, align 4
  br label %52

51:                                               ; preds = %34
  store i32 1, i32* %3, align 4
  br label %52

52:                                               ; preds = %51, %50, %19
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @Assert(i32) #1

declare dso_local double @estimateHyperLogLog(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
